--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -52,7 +52,7 @@ header li{
     grid-template-columns: 1fr;
     grid-template-rows: 50px 1fr 100px;
     height: 500px;
-    /* width: 70%; */
+    width: 70%;
 }
 h2{
     grid-row: 1/2;
