--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -26,6 +26,16 @@ header li{
 }
 
 /* MAIN AREA */
+main{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+    grid-gap: 1px;
+    background-color: black;
+}
+.text{
+    background-color: #edddd0;
+}
 
 
 /* FOOTER AREA */
