--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -46,3 +46,36 @@ main{
     align-items: center;
     background-color: #a6cad4;
 }
+
+/* MEDIA QUERY */
+@media screen and (min-width: 600px) {
+    main{
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-auto-rows: 1fr;
+        grid-gap: 1px;
+        background-color: black;
+    }
+    /* Child */
+    .text{
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 60% 40%;
+        background-color: #edddd0;
+    }
+    /* Descendant */
+    .link{
+        grid-row: 1;
+        grid-column: 1;
+        padding: 0 5px 0 0;
+    }
+    .term{
+        grid-row: 2/3;
+    }
+    .desc{
+        grid-column: 2/3;
+        padding: 0 5px;
+        width: 90%;
+    }
+
+}
